--- a/src/css/component.css
+++ b/src/css/component.css
@@ -16,5 +16,4 @@
 
 .dash {
     width: 2rem;
-    letter-spacing: normal;
 }
