--- a/src/css/home.css
+++ b/src/css/home.css
@@ -10,10 +10,6 @@
     padding-left: 2rem;
 }
 
-#logo {
-    padding-right: 2rem;
-}
-
 #works,
 #info {
     gap: var(--spacing-xs);
@@ -22,6 +18,7 @@
 /* Common link styles */
 #works a,
 #info a {
+    max-width: fit-content;
     display: flex;
     align-items: center;
     gap: var(--spacing-xs);
